# segacd-fmv-ttrc

./: .gitignore  ADPCM.md  AGENTS.md  ANALYSIS.md  BUDGETS.md  BUEFFERING.md  COMPARISON.md  CONFIG.md  HUD.md  MOVIE.md  Makefile  README.md  STREAMING.md  pyproject.toml
boot/: asictest_boot.s  asictest_ip.s  asictest_sp.s  boot.s  cdcbench_boot.s  cdcbench_ip.s  cdcbench_sp.s  dmabench_boot.s  dmabench_ip.s  handoff.s  ip.s  movieplay_boot.s  movieplay_ip.s  movieplay_sp.s  pcmtest_boot.s  pcmtest_ip.s  pcmtest_sp.s  prgtest_boot.s  prgtest_ip.s  prgtest_sp.s  sp.s  still256_boot.s  still256_ip.s  streamtest_boot.s  streamtest_ip.s  streamtest_sp.s  test1m_boot.s  test1m_ip.s  test1m_sp.s  upscaletest_main.s
cfg/: handoff.ld  ip.ld  sp.ld
configs/: bad-apple-h32.toml  bad-apple-h40.toml  lunar-sss-op-h32.toml  lunar-sss-op-h40.toml  machi-ed-h40.toml  machi-op-h40.toml  ps2-sakura-op-h32.toml  sonic-jam-op-h32.toml  sonic-jam-op-h40-cold180.toml  sonic-jam-op-h40-cold185.toml  sonic-jam-op-h40-cold190.toml  sonic-jam-op-h40.toml  tears-of-steel-h32.toml
docs/: H40_FULL_JOURNEY.md  REASONING_METHOD.md
tools/: analysis_logs.py  analysis_style.py  analyze_recorded_audio.py  av_config.py  av_version.txt  bootstrap_python.sh  cbr_paths.py  check_player_ring.py  compare_recordings.py  comparison_preview.py  decode_dump.py  decode_scan.py  encode_config.py  export_sim_video.py  extract_verification_frames.sh  find_comparison_sync.py  gen_debugfont.py  gen_hexfont.py  gen_streamtest.py  gen_textfont.py  global_palette_video.py  gpu_quant.py  ima_adpcm.py  make_base.py  (+69 more)
(+96 files in other folders)
