[project]
name = "segacd-fmv-ttrc-tools"
version = "0.0.0"
description = "Host-side tools for the SEGA-CD Tile Texture Reuse Codec"
requires-python = "==3.14.4"
dependencies = [
    "numpy==2.3.5",
    "pillow==12.1.1",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x[ctk]==14.1.1",
]

[tool.uv]
package = false
python-preference = "only-managed"
required-version = "==0.11.29"
